# medtech2

./: .env.local  .gitignore  LICENSE  README.md  pyproject.toml
.claude/: prompt-history.md
app/: __init__.py  api.py  archive.py  catalogue.py  clean_llm.py  cli.py  config.py  db.py  extract_api.py  extract_service.py  fx.py  fx_api.py  models.py  normalize.py  ocr.py  ocr_api.py  ocr_correction.py  pipeline.py  schemas.py  tariffs.py  validation.py
app/parsers/: __init__.py  abbreviations.py  base.py  columns.py  detect.py  docx.py  excel.py  gemini_pdf.py  numbers.py  ocr_pdf.py  pdf.py  pdf_groq.py  registry.py  ruslang.py  surya_llm.py  surya_ocr.py  table.py  tesseract_ocr.py  vlm_ollama.py
app/static/: index.html  upload-test.html
data/: fx_last_good.json
docs/: ARCHITECTURE.md
frontend/: .env.example  next.config.mjs
frontend/app/: globals.css  layout.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/components/dashboard/: fx-rates.tsx  header.tsx  price-dynamics.tsx  sidebar.tsx  state.tsx
frontend/lib/: api.ts  format.ts  queue.ts  use-api.ts
scripts/: backfill_clean.py
tests/: test_aggregate.py  test_archive.py  test_fx.py  test_parser_db.py
tests/eval/: __init__.py  build_golden.py  compare.py  golden.py  golden_review.py  job_eval.py  ocr_ab.py  run_eval.py  scan_preview.py  testdb.py
tests/golden/: klinika_1_2024.json  klinika_1_2026.json  klinika_2_2025.json  klinika_2_2026.json  klinika_3.json  klinika_4.json  klinika_5.json  klinika_5_scan.json  klinika_6.json  klinika_7.json  klinika_8.json
(+9 files in other folders)
