[project]
name = "medarchive"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.138.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.12",
    "pymupdf>=1.27.2.3",
    "python-dateutil>=2.9.0.post0",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.32",
    "rapidfuzz>=3.14.5",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.49.0",
    "xlrd>=2.0.2",
]
